added conditional docs generating
