# server/api/services/auth/models.py
@@ -1,11 +1,12 @@
 from pydantic import BaseModel
 
 
-class AccessTokenSet(BaseModel):
+class TokenSet(BaseModel):
     access_token: str
     access_token_expires_in: int
-
-
-class RefreshTokenSet(AccessTokenSet):
     refresh_token: str
     refresh_token_expires_in: int
+
+
+class VerificationRequestId(BaseModel):
+    request_id: str
