# server/api/services/auth/service.py
@@ -1,11 +1,12 @@
 from datetime import timedelta
 from api.services.jwt import JwtService
+from api.main import get_runtime_settings
 from shared.entities.email_verification import EmailVerificationRepository
 from shared.entities.refresh_token import RefreshTokenRepository
 from shared.entities.user.repo import UserRepository
 from shared.settings import Settings
 from shared.utils import utc_now, validate_password
-from .models import AccessTokenSet, RefreshTokenSet
+from .models import TokenSet, VerificationRequestId
 
 
 class AuthService:
@@ -38,32 +39,18 @@ class AuthService:
         self.jwt_service = jwt_service
         self.settings = settings
 
-    def _generate_jwt_set_email(self, user_id: int, email_verify: int):
-        jwt = self.jwt_service.new(user_id)
-        return AccessTokenSet(
-            access_token=jwt,
-            access_token_expires_in=self.settings.access_token_expires_in,
-        )
-
-    def _generate_jwt_set(self, user_id: int) -> AccessTokenSet:
-        jwt = self.jwt_service.new(user_id)
-        return AccessTokenSet(
-            access_token=jwt,
-            access_token_expires_in=self.settings.access_token_expires_in,
-        )
-
-    async def _generate_complete_jwt_set(self, user_id: int) -> RefreshTokenSet:
+    async def _generate_complete_jwt_set(self, user_id: int) -> TokenSet:
         jwt = self.jwt_service.new(user_id)
         refresh = self.refresh_token_repo.new(user_id)
         await self.refresh_token_repo.save(refresh)
-        return RefreshTokenSet(
+        return TokenSet(
             access_token=jwt,
             refresh_token=str(refresh.id),
             access_token_expires_in=self.settings.access_token_expires_in,
             refresh_token_expires_in=self.settings.refresh_token_expires_in,
         )
 
-    async def login(self, email: str, password: str) -> RefreshTokenSet:
+    async def login(self, email: str, password: str) -> TokenSet:
         user = await self.user_repo.find_by_email(email)
         if user is None:
             raise AuthService.UserNotFound()
@@ -71,26 +58,31 @@ class AuthService:
             raise AuthService.InvalidPassword
         return await self._generate_complete_jwt_set(user.id)
 
-    async def register(
-        self, email: str, username: str, password: str
-    ) -> AccessTokenSet | RefreshTokenSet:
-        match await self.user_repo.lookup_by_email_or_username(email, username):
-            case "email":
-                raise AuthService.EmailExists
-            case "username":
-                raise AuthService.UsernameExists
-        if self.settings.email_verification_enable:
+    if get_runtime_settings().email_verification_enabled:
+
+        async def register(  # type: ignore
+            self, email: str, username: str, password: str
+        ) -> VerificationRequestId:
+            match await self.user_repo.lookup_by_email_or_username(email, username):
+                case "email":
+                    raise AuthService.EmailExists
+                case "username":
+                    raise AuthService.UsernameExists
             raise NotImplementedError
-            # user = await self.user_repo.commit_new(email, username, password, False)
-            # email_verify = await self.email_verification_repo.commit_new(user.id)
-            # # send email
-            # return self._generate_jwt_set_email(user.id, [JwtRoles.EMAIL_VERIFICATION], email_verify.id)
-        else:
+
+    else:
+
+        async def register(self, email: str, username: str, password: str) -> TokenSet:
+            match await self.user_repo.lookup_by_email_or_username(email, username):
+                case "email":
+                    raise AuthService.EmailExists
+                case "username":
+                    raise AuthService.UsernameExists
             user = self.user_repo.new(email, username, password, True)
             await self.user_repo.save(user)
             return await self._generate_complete_jwt_set(user.id)
 
-    async def refresh(self, refresh_token: str) -> RefreshTokenSet:
+    async def refresh(self, refresh_token: str) -> TokenSet:
         token = await self.refresh_token_repo.find(refresh_token)
         if token is None:
             raise AuthService.InvalidRefreshToken
@@ -101,7 +93,7 @@ class AuthService:
             raise AuthService.InvalidRefreshToken
         return await self._generate_complete_jwt_set(token.user_id)
 
-    async def verify(self, request_id: str, code: str) -> RefreshTokenSet:
+    async def verify(self, request_id: str, code: str) -> TokenSet:
         verify = await self.email_verification_repo.find(request_id)
         if verify is None:
             raise AuthService.InvalidRequestId
